# opengl-ui

./: .gitignore  CMakeLists.txt
inc/: UI.h  glad.h
inc/shaders/: fs.frag  vs.vert
src/: glad.c
tst/: test.cpp
